[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/monster.png" type="Texture" id=1]
[ext_resource path="res://Monsters/Leg.tscn" type="PackedScene" id=2]
[ext_resource path="res://Monsters/Monster.gd" type="Script" id=3]
[ext_resource path="res://Monsters/DetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Monsters/WanderController.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hitboxes/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 27.38
height = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 662.302

[sub_resource type="CapsuleShape2D" id=3]
radius = 37.0
height = 0.0

[node name="Monster" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="FrontLegs" type="Node2D" parent="."]

[node name="Leg" parent="FrontLegs" instance=ExtResource( 2 )]
position = Vector2( 21, -12 )

[node name="Leg2" parent="FrontLegs" instance=ExtResource( 2 )]
position = Vector2( 31, -2 )

[node name="Leg3" parent="FrontLegs" instance=ExtResource( 2 )]
position = Vector2( 25, 7 )

[node name="Leg4" parent="FrontLegs" instance=ExtResource( 2 )]
position = Vector2( 20, 18 )

[node name="BackLegs" type="Node2D" parent="."]

[node name="Leg5" parent="BackLegs" instance=ExtResource( 2 )]
position = Vector2( -15, -12 )
flipped = false

[node name="Leg6" parent="BackLegs" instance=ExtResource( 2 )]
position = Vector2( -25, -2 )
flipped = false

[node name="Leg7" parent="BackLegs" instance=ExtResource( 2 )]
position = Vector2( -25, 7 )
flipped = false

[node name="Leg8" parent="BackLegs" instance=ExtResource( 2 )]
position = Vector2( -20, 18 )
flipped = false

[node name="RightCheck" type="Position2D" parent="."]
position = Vector2( 150, -1 )

[node name="LeftCheck" type="Position2D" parent="."]
position = Vector2( -150, -4 )

[node name="DetectionZone" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 0

[node name="CollisionShape2D" parent="DetectionZone" index="0"]
shape = SubResource( 2 )

[node name="WanderController" parent="." instance=ExtResource( 5 )]

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 7 )]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="DetectionZone"]
[editable path="Hurtbox"]
